<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>external_pressure_sensor_package</name>
  <version>1.0.0</version>
  <description>Driver for KELLER Series 10LHPX Pressure Transmitter (Depth Sensor)</description>
  <maintainer email="m.nitsch@irt.rwth-aachen.de">Maximilian Nitsch</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake</build_depend>
  <build_depend>tf2_ros</build_depend>

  <depend>std_msgs</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
